tests/NormalTests/paczka1/small_fuzzy/47536489.err
Error in line 4: wUWsOk A246 98,7
Error in line 2: Na5Jx A746 21,0
